idea/tests/testData/multiplatform/duplicateExpectsImplicit/bottom/bottom.kt
// Note that here we have no ambiguity, becuase we don't consider
// declarations without 'expect' as potential weakly-compatible 'expect'-counterpart
actual class <!LINE_MARKER("descr='Has expects in left module'"), LINE_MARKER("descr='Has expects in left module'")!>A<!>
